--- a/src/pages/login.css
+++ b/src/pages/login.css
@@ -48,7 +48,7 @@ body {
 
 .form-group input {
   width: 100%;
-  padding: 12px 16px;
+  padding: 10px 16px;
   border: 2px solid #656565;
   border-radius: 8px;
   font-size: 16px;
@@ -74,6 +74,25 @@ body {
   font-weight: 600;
   cursor: pointer;
   margin-top: 10px;
+}
+.show{
+  color: var(--text-colour);
+  cursor: pointer;
+  background: var(--registration-background);
+  align-items: center;
+  border-radius: 6px;
+  border: 1px solid #656565;
+  padding: 10px 0 10px 0;
+  *{
+    margin: 0 10px ;
+    transform: translateY(1px);
+  }
+}
+
+.pass-field{
+  display: flex;
+  align-items: center;
+
 }
 
 .login-btn:active {
